--- a/github-commits/angular.json
+++ b/github-commits/angular.json
@@ -122,6 +122,10 @@
               "devServerTarget": "github-commits:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
